--- a/DOM/index.html
+++ b/DOM/index.html
@@ -138,7 +138,7 @@ innerHTML
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Part 1</title>
 </head>
 <body> 
     <h1>Dom Learning</h1>
